#cmake
ez_cmake_init()

ez_requires_ultralight()

get_filename_component(PROJECT_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME_WE)
ez_create_target(LIBRARY ${PROJECT_NAME})

set (EZ_ULTRALIGHT_DIR "" CACHE PATH "Directory of the Ultralight SDK")

include_directories ("${EZ_ULTRALIGHT_DIR}/include")

set (EZ_ULTRALIGHT_LIB_DIR "${EZ_ULTRALIGHT_DIR}/lib")

target_link_libraries(${PROJECT_NAME}
  PUBLIC
  Foundation
  Core
  RendererCore
  GameEngine
  ${EZ_ULTRALIGHT_LIB_DIR}/AppCore.lib
  ${EZ_ULTRALIGHT_LIB_DIR}/Ultralight.lib
  ${EZ_ULTRALIGHT_LIB_DIR}/UltralightCore.lib
  ${EZ_ULTRALIGHT_LIB_DIR}/WebCore.lib  
)

#add_custom_command(TARGET ${PROJECT_NAME}
#  COMMAND ${CMAKE_COMMAND}
#	-DMSVC_BUILD_CONFIG_DIR=${CMAKE_CFG_INTDIR}
#  -DBUILDSYSTEM_PLATFORM_64BIT=${BUILDSYSTEM_PLATFORM_64BIT}
#  -DBUILDSYSTEM_PLATFORM_WINDOWS_DESKTOP=${BUILDSYSTEM_PLATFORM_WINDOWS_DESKTOP}
#  -DBUILDSYSTEM_PLATFORM_WINDOWS_UWP=${BUILDSYSTEM_PLATFORM_WINDOWS_UWP}
#  -DULTRALIGHT_SOURCE=${EZ_ULTRALIGHT_DIR}
#	-DULTRALIGHT_TARGET=$<TARGET_FILE_DIR:${PROJECT_NAME}>
#	-P "${CMAKE_CURRENT_SOURCE_DIR}/CopyUltralightDlls.cmake"
#  VERBATIM
#)
